--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <section class="q-n-a">
             <h3 class="question">How does your state evaluate homeschooling project?</h3>
             <div class="answer-container">
-                <div class="answer" data-value="1">USA</div>
-                <div class="answer" data-value="2">???</div>
-                <div class="answer" data-value="3">???</div>
-                <div class="answer" data-value="4">???</div>
+                <div class="answer" data-value="1">Both testing and Portfolio evaluations</div>
+                <div class="answer" data-value="2">Testing</div>
+                <div class="answer" data-value="3">Portfolios evaluations</div>
             </div>
             <div class="button-holder">&nbsp;</div>
         </section>
